--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Raajheshkannaa.github.io by raajheshkannaa</title>
+    <title>MyBlog or whatever by Raajhesh Kannaa</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Raajheshkannaa.github.io</h1>
-        <h2>Hello, Raajhesh Kannaa !</h2>
+        <h1>Here Again!</h1>
+        <h2>Just another organism under the sun;</h2>
         <p></p>
 
 
